# compositional-learning-experiments

./: .gitignore  .gitmodules  README.md  pyproject.toml
compositional_learning_experiments/: data.py  parse_scan.py  train.py  train_scan.py
compositional_learning_experiments/config/: config.yaml
compositional_learning_experiments/config/data/: equation_verification_40k.yaml  equation_verification_small.yaml  equation_verification_tiny.yaml
compositional_learning_experiments/config/model/: attention_rnn.yaml  encoder_decoder_rnn.yaml  rounding_tree_rnn.yaml  seq2seq_attention_rnn.yaml  seq2seq_transformer.yaml  sequential_siamese_lstm.yaml  sequential_siamese_transformer.yaml  sequential_symmetric_lstm.yaml  sequential_tree_transformer.yaml  siamese_lstm.yaml  siamese_transformer.yaml  transformer.yaml  tree_rnn.yaml  tree_transformer.yaml  vector_quantized_tree_rnn.yaml
compositional_learning_experiments/config/split/: addprim.yaml  filler.yaml  length.yaml  simple.yaml  template.yaml
compositional_learning_experiments/config/task/: equation_verification_sequential.yaml  equation_verification_tree.yaml  scan_addprim.yaml  scan_filler.yaml  scan_length.yaml  scan_simple.yaml  scan_template.yaml
compositional_learning_experiments/data/: equation_verification.py  scan.py
compositional_learning_experiments/models/: __init__.py  base.py  equation_verification.py  loading.py  seq2seq.py  sequence.py  tree.py
compositional_learning_experiments/scripts/: make_representations.py  run_experiment.py
