[tool.poetry]
name = "compositional-learning-experiments"
version = "0.1.0"
description = ""
authors = ["Aidan Swope <aidanswope@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
parsy = "^1.3.0"
graphviz = "^0.14.1"
torchtext = "^0.6.0"
revtok = "^0.0.3"
tensorboard = "^2.2.2"
pytorch-lightning = "^0.8.5"
torch = {url = "https://download.pytorch.org/whl/cu101/torch-1.5.1%2Bcu101-cp38-cp38-linux_x86_64.whl", platform = "linux"}

[tool.poetry.dev-dependencies]
python-language-server = {version = "^0.34.1", allow-prereleases = true}
flake8 = {version = "^3.8.3", allow-prereleases = true}
mypy = {version = "^0.782", allow-prereleases = true}
black = {version = "^19.10b0", allow-prereleases = true}
isort = {version = "^5.0.9", allow-prereleases = true}
neovim = {version = "^0.3.1", allow-prereleases = true}
pynvim = {version = "^0.4.1", allow-prereleases = true}
jupyter = "^1.0.0"
ipython = "^7.16.1"
ipykernel = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
